<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.ucsd.cse110.recipeforsuccess.IngredientSearchViewFragment"
    android:background="#FFAAEFDF"
    android:windowBackground="@color/colorAccent" >

    <LinearLayout
        android:id="@+id/recipe_search_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/chef_logo"
        android:layout_below="@+id/recipe_search_container"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Search by Ingredients"
        android:textSize="75px"
        android:id="@+id/textView2"
        android:textAlignment="center"
        android:layout_below="@+id/imageView"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="550px"
        android:layout_height="125px"
        android:id="@+id/editText"
        android:inputType="text"
        android:hint=" Enter name of ingredient"
        android:background="#d9d9d9"
        android:layout_below="@+id/textView2"
        android:layout_marginBottom="30px" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text=""
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/editText"
        android:layout_alignStart="@+id/editText"
        android:id="@+id/searchingIngredients"
        android:longClickable="false" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search"
        android:id="@+id/button"
        android:clickable="true"
        android:contextClickable="false"

        android:background="#FFD64B"
        android:layout_below="@+id/editText"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:layout_marginTop="61dp" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add"
        android:id="@+id/addIngredient"
        android:layout_alignTop="@+id/editText"
        android:layout_alignBottom="@+id/editText"
        android:layout_alignRight="@+id/recipe_search_container"
        android:layout_alignEnd="@+id/recipe_search_container"
        android:layout_toRightOf="@+id/editText"
        android:layout_toEndOf="@+id/editText"
        android:background="#063c69"
        android:textColor="#ffffff"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_marginLeft="20px"
        android:layout_margin="20px" />


</RelativeLayout>
