...
        android:layout_marginTop="20dp"
        android:singleLine="true" />

    <EditText
        android:layout_width="600px"
        android:layout_height="125px"
        android:id="@+id/editText"
        android:inputType="text"
        android:hint=" Enter name of recipe"
        android:background="#d9d9d9"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Search"
        android:id="@+id/button"
        android:clickable="true"
        android:contextClickable="false"
        android:layout_below="@+id/editText"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:layout_marginTop="36dp"
...
